--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.black]
-extend-exclude = "mycego_venv"  # Ignore the "mycego_venv" directory
+extend-exclude = "venv"         # Ignore the "mycego_venv" directory
 line-length = 120               # Maximum line length
 
 [tool.django-stubs]
@@ -11,7 +11,7 @@ include_trailing_comma = true   # Add a comma after the last element in parenthe
 line_length = 120               # Maximum line length (recommended for Black compatibility)
 lines_after_imports = 2         # Number of blank lines to leave after imports
 multi_line_output = 3           # Use import format with hyphens in parentheses
-skip = "mycego_venv"            # Ignore the "mycego_venv" directory
+skip = "venv"                   # Ignore the "mycego_venv" directory
 
 [tool.mypy]
 ignore_missing_imports = true   # Ignore missing type annotations for external libraries
